--- a/sass/_config.sass
+++ b/sass/_config.sass
@@ -20,7 +20,7 @@ body
   width: 100%
   margin: auto
   position: relative
-  overflow: hidden
+  // overflow: hidden
   &--mobile
     display: none
     visibility: hidden
