--- a/sass/sections/_categories.sass
+++ b/sass/sections/_categories.sass
@@ -60,7 +60,7 @@
     background-color: $bgc
     position: absolute
     top: 152px
-    z-index: 100
+    z-index: 20
     background-repeat: no-repeat
     background-size: 18px
     background-position: center
